--- a/src/components/Pa2.astro
+++ b/src/components/Pa2.astro
@@ -33,7 +33,7 @@
         <p class="bun">
             お好みに合わせ、外装・内装・糸・金具類などをお選びいただきます。<br class="pc"><a href="/patternorder" class="animate-link" >注文の流れついて</a>
             
-            <br class="sp"><br class="sp"> <br class="pc"> <br class="pc">お引き渡しについて、ご配達・仕入れにかかる日数を加え、発送まで３、４週間程度お時間を頂いております。
+            <br class="sp"><br class="sp"><br class="pc"><br class="pc">お引き渡しについて、ご配達・仕入れにかかる日数を加え、発送まで３、４週間程度お時間を頂いております。
             <a href="/leagal" class="animate-link" >詳細はこちらから</a>
           
         </p>
@@ -44,7 +44,7 @@
     <h1 class="Home_Contact_Title__KdAFZ">SELECT</h1>
     <main class="Layout_Main__dLHqI">
         <div class="Home_Contact__nbvJ6">
-            <p class="Home_Contact_Text__3D7zy">パターンオーダーは以下のフォームよりお送りください。<br>送信後、決算ページに移行します。<span class="stripe-marker">カート名：パターンオーダーをご選択します。</span>  <br class="sp"><br class="pc"><span class="kome">※</span>は必須項目です</p>
+            <p class="Home_Contact_Text__3D7zy">パターンオーダーは以下のフォームよりお送りください。<br>送信後、決算ページに移行します。<br class="sp"><span class="stripe-marker">カート名：パターンオーダーをご選択します。</span>  <br class="sp"><br class="pc"><span class="kome">※</span>は必須項目です</p>
             <form method="post" action="https://contact-web.form.newt.so/v1/3Q7_1A1m3">
                 <div style="display: none;"><input type="text" name="wana" /></div>
                 <label class="Home_Contact_Label__hwNpu" for="name">*氏名</label>
@@ -583,7 +583,13 @@ body {
     border: 1px solid #ccc;
     border-radius: 4px;
     resize: vertical
+
+
+    
 }
+
+
+
 
 .Home_Contact_Textarea__iUa5y:hover {
     border: 1px solid #aaa
@@ -608,13 +614,20 @@ body {
 }
 
 .Home_Contact_Text__3D7zy {
-    font-size: 0.9rem;
-    line-height: 1.5;
-    margin: 0 0 48px;
+    font-size: 0.9575rem;   
+     line-height: 1.5;
+     font-family: "Shippori Mincho", sans-serif;
+     margin: 0 0 48px;
     padding: 0;
-    color: #666;
-    text-align: center;
+  text-align: center;
+
 }
+
+
+
+
+
+
 
 .Layout_Main__dLHqI {
     flex: 1 1;
