--- a/src/components/Leagal.astro
+++ b/src/components/Leagal.astro
@@ -84,7 +84,7 @@
     <h2 class="c-pageSection_title">製品のお届けについて</h2>
     <p class="c-pageSection_text">
         ご注文を頂いてから一点ずつ丁寧に手作りで製作するため、発送まで2、3週間程お時間を頂いております。<br>
-      ・パターンオーダーの場合には、仕入れにかかる日数を加え、発送まで3、4週間程度お時間を頂いております。<br>
+      ・セミオーダーの場合には、仕入れにかかる日数を加え、発送まで3、4週間程度お時間を頂いております。<br>
       ・銀行振込の場合は、ご入金確認後に発送させて頂きます。<br>
       ・ご注文受付後に納期の変更等が発生した際には別途Ｅメールでご連絡を差し上げます。
     </p>
