--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -64,7 +64,7 @@
       <div class="c-bannerList_img">
         <img src="/samale-min.webp" alt="パターンオーダーの画像">
       </div>
-      <h3 class="c-bannerList_title">PATTERN ORDER</h3>
+      <h3 class="c-bannerList_title">SEMI ORDER</h3>
       <p class="c-bannerList_text">パーツごとにお好みの革の色組み合わせ、金具などをお選びいただいて製作するセミオーダーを承っております。</p>
     </a>
   </li>
