--- a/src/components/Pattern.astro
+++ b/src/components/Pattern.astro
@@ -8,7 +8,7 @@
                 </time>
         </div>
         <h1 class="newsTop_title">
-          パターンオーダー   </h1>
+          セミオーダー   </h1>
        
       </div>
       <div class="newsVisual">
@@ -19,7 +19,7 @@
     
     <div class="newsEditor">
         <h1 class="ttl_1"><span class="line">個性を紡ぐ、<br class="sp">あなただけのレザーアート</span></h1>
-      <p>レザーアクセサリーは、持つ人を印象づけるキーアイテム。だからこそ細部までこだわり、納得できるものを選びたい。<br class="sp"><br class="sp">当店では素材の中からお好みの革の種類や色を選択していただき、革小物を製作するパターンオーダーを承っております。<br class="sp"><br class="sp">あなただけのこだわり詰め込んだ、「持つ楽しさ」「使う喜び」を存分に味わっていただけます。</p>
+      <p>レザーアクセサリーは、持つ人を印象づけるキーアイテム。だからこそ細部までこだわり、納得できるものを選びたい。<br class="sp"><br class="sp">当店では素材の中からお好みの革の種類や色を選択していただき、革小物を製作するセミオーダーを承っております。<br class="sp"><br class="sp">あなただけのこだわり詰め込んだ、「持つ楽しさ」「使う喜び」を存分に味わっていただけます。</p>
     <p>&nbsp;</p>
 
  
@@ -31,7 +31,7 @@
       <div class="table notbor">
         <dl>
         <dt>STEP - 1 <br class="sp">アイテム</dt>
-        <dd>お客様にはベースとなる革小物を商品ページから選択していただきます。<br class="sp"><br class="sp">ご希望の素材によっては、パターンオーダーに対応していないモデルもございます。<br class="sp"><br class="sp"><br class="pc">また、ポケットを増やす等の形のカスタマイズは出来ません。</dd>
+        <dd>お客様にはベースとなる革小物を商品ページから選択していただきます。<br class="sp"><br class="sp">ご希望の素材によっては、セミオーダーに対応していないモデルもございます。<br class="sp"><br class="sp"><br class="pc">また、ポケットを増やす等の形のカスタマイズは出来ません。</dd>
         </dl>
         <dl>
         <dt>STEP - 2 <br class="sp">皮革</dt>
