--- a/src/components/Pa3.astro
+++ b/src/components/Pa3.astro
@@ -1,9 +1,12 @@
+
 <div class="container">
+    
     <div class="slider-container">
+        
         <div class="slider">
             <div class="slides">
                 <div id="slides__1" class="slide">
-                    <img loading="lazy" src="/koreree.webp" class="slide__img" alt="パターン">
+                    <img loading="lazy" src="/keycasrre.webp" class="slide__img" alt="パターン">
             
                 </div>
                 <div id="slides__2" class="slide">
@@ -44,7 +47,7 @@
     <main class="Layout_Main__dLHqI">
         <div class="Home_Contact__nbvJ6">
             <p class="Home_Contact_Text__3D7zy">セミオーダーは以下のフォームよりお送りください。<br class="sp"><br>送信後、決算ページに移行します。<br class="sp"><span class="stripe-marker">カート名：パターンオーダーをご選択します。</span><br class="sp"><br class="pc"><span class="kome">※</span>は必須項目です</p>
-            <form method="post" action="https://contact-web.form.newt.so/v1/3Q7_1A1m3">
+            <form method="post" action="https://contact-web.form.newt.so/v1/ONvlZEQPg">
                 <div style="display: none;"><input type="text" name="wana" /></div>
                 <label class="Home_Contact_Label__hwNpu" for="name">*氏名</label>
                 <input class="Home_Contact_InputText__vKPd7" id="name" required="required" name="name" placeholder="本名をご記入ください">
@@ -76,9 +79,10 @@
                     <option value="ターコイズ">ターコイズ</option>
                     <option value="ピンク">ピンク</option>
                 </select>
-             
-                <label class="Home_Contact_Label__hwNpu" for="interior">*内装</label>
-                <select name="interior" class="form-control" required="required">
+
+
+                <label class="Home_Contact_Label__hwNpu" for="left_pocket">*左ポケット</label>
+                <select name="left_pocket" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ブラウン">ブラウン</option>
                     <option value="ダークブラウン">ダークブラウン</option>
@@ -90,8 +94,8 @@
                     <option value="ピンク">ピンク</option>
                 </select>
             
-                <label class="Home_Contact_Label__hwNpu" for="left_pocket1">*ポケット1</label>
-                <select name="left_pocket1" class="form-control" required="required">
+                <label class="Home_Contact_Label__hwNpu" for="center_pocket">*中央ポケット</label>
+                <select name="center_pocket" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ブラウン">ブラウン</option>
                     <option value="ダークブラウン">ダークブラウン</option>
@@ -103,8 +107,8 @@
                     <option value="ピンク">ピンク</option>
                 </select>
              
-                <label class="Home_Contact_Label__hwNpu" for="right_pocket2">*ポケット2</label>
-                <select name="ight_pocket2" class="form-control" required="required">
+                <label class="Home_Contact_Label__hwNpu" for="right_pocket">*右ポケット</label>
+                <select name="right_pocket" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ブラウン">ブラウン</option>
                     <option value="ダークブラウン">ダークブラウン</option>
@@ -116,57 +120,14 @@
                     <option value="ピンク">ピンク</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="mati">*マチ</label>
-                <select name="mati" class="form-control" required="required">
+           
+                <label class="Home_Contact_Label__hwNpu" for="kanagu">*金具（キーフック）</label>
+                <select name="kanagu" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
-                    <option value="ブラウン">ブラウン</option>
-                    <option value="ダークブラウン">ダークブラウン</option>
-                    <option value="ブラック">ブラック</option>
-                    <option value="グレー">グレー</option>
-                    <option value="オレンジ">オレンジ</option>
-                    <option value="グリーン">グリーン</option>
-                    <option value="ターコイズ">ターコイズ</option>
-                    <option value="ピンク">ピンク</option>
+                    <option value="ゴールド">ゴールド</option>
+                    <option value="シルバー">シルバー</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="coinpockt">*小銭ポケット</label>
-                <select name="coinpockt" class="form-control" required="required">
-                    <option value="" disabled selected>選択してください</option>
-                    <option value="ブラウン">ブラウン</option>
-                    <option value="ダークブラウン">ダークブラウン</option>
-                    <option value="ブラック">ブラック</option>
-                    <option value="グレー">グレー</option>
-                    <option value="オレンジ">オレンジ</option>
-                    <option value="グリーン">グリーン</option>
-                    <option value="ターコイズ">ターコイズ</option>
-                    <option value="ピンク">ピンク</option>
-                </select>
-            
-                <label class="Home_Contact_Label__hwNpu" for="handle">*取っ手</label>
-                <select name="handle" class="form-control" required="required">
-                    <option value="" disabled selected>選択してください</option>
-                    <option value="ブラウン">ブラウン</option>
-                    <option value="ダークブラウン">ダークブラウン</option>
-                    <option value="ブラック">ブラック</option>
-                    <option value="グレー">グレー</option>
-                    <option value="オレンジ">オレンジ</option>
-                    <option value="グリーン">グリーン</option>
-                    <option value="ターコイズ">ターコイズ</option>
-                    <option value="ピンク">ピンク</option>
-                </select>
-
-                <label class="Home_Contact_Label__hwNpu" for="fasner">*ファスナー</label>
-                <select name="fasner" class="form-control" required="required">
-                    <option value="" disabled selected>選択してください</option>
-                    <option value="ブラウン">ブラウン</option>
-                    <option value="ダークブラウン">ダークブラウン</option>
-                    <option value="ブラック">ブラック</option>
-                    <option value="グレー">グレー</option>
-                    <option value="オレンジ">オレンジ</option>
-                    <option value="グリーン">グリーン</option>
-                    <option value="ターコイズ">ターコイズ</option>
-                    <option value="ピンク">ピンク</option>
-                </select>
 
                 <label class="Home_Contact_Label__hwNpu" for="ito">*糸</label>
                 <select name="ito" class="form-control" required="required">
@@ -184,14 +145,15 @@
                 <label class="Home_Contact_Label__hwNpu" for="kokuin">刻印模様</label>
                 <select name="kokuin" class="form-control" >
                     <option value="" disabled selected>選択してください</option>
-                    <option value="有り">有り（配置ポケット1）</option>
-                    <option value="有り">有り（配置ポケット2）</option>
+                    <option value="有り">有り（配置 中央ポケット）</option>
+                    <option value="有り">有り（配置 右ポケット）</option>
+                    <option value="有り">有り（配置 左ポケット）</option>
                     <option value="無し">無し</option>
                 
                 </select>
 
                 <label class="Home_Contact_Label__hwNpu" for="name">イニシャル刻印</label>
-                <input class="Home_Contact_InputText__vKPd7" id="name"  placeholder="12文字までをご記入ください、配置はポケット1または2">
+                <input class="Home_Contact_InputText__vKPd7" id="name"  placeholder="12文字までをご記入ください、配置は中央ポケット">
            
                 <button type="submit" class="Home_Contact_Button__sfQX_">送信する</button>
             </form>
@@ -239,7 +201,7 @@
         }
       
         async function sendRequest(formData: FormData) {
-          return await fetch('https://contact-web.form.newt.so/v1/3Q7_1A1m3', {
+          return await fetch('https://contact-web.form.newt.so/v1/ONvlZEQPg', {
             method: 'POST',
             body: formData,
             headers: {
