--- a/src/pages/patternorder-m.astro
+++ b/src/pages/patternorder-m.astro
@@ -5,7 +5,7 @@ import { ViewTransitions } from 'astro:transitions';
 ---
 <ViewTransitions />
 
-<Layout title="ミニマムウォレット パターンオーダーについて">
+<Layout title="パターンオーダー ミニマムウォレットについて">
   <main>
 
   </main>
