--- a/src/components/Productlist.astro
+++ b/src/components/Productlist.astro
@@ -171,19 +171,19 @@
 
 
 <li class="newsList_node c-newsList_node">
-  <a href="/">
+  <a href="/walletfasner">
     <div class="c-newsList_columnLeft">
       <div class="newsList_info c-newsList_info">
         <div class="newsList_category c-newsList_category">
-          STATIONERY             </div>
+         WALLET            </div>
         <time class="newsList_date c-newsList_date">
                      </time>
       </div>
       <h3 class="newsList_title c-newsList_title">
-        RHODIA カバー           </h3>
+        ラウンドファスナーウォレット</h3>
     </div>
     <div class="newsList_img c-newsList_img">
-      <img src="/coming.webp">
+      <img src="/pink1.webp">
     </div>
   </a>
 </li>
