--- a/src/components/Productlist2.astro
+++ b/src/components/Productlist2.astro
@@ -12,15 +12,15 @@
     <div class="c-newsList_columnLeft">
       <div class="newsList_info c-newsList_info">
         <div class="newsList_category c-newsList_category">
-          KEYCASE              </div>
+                       </div>
         <time class="newsList_date c-newsList_date">
                       </time>
       </div>
       <h3 class="newsList_title c-newsList_title">
-       キーケース        </h3>
+              </h3>
     </div>
     <div class="newsList_img c-newsList_img">
-      <img src="/keycasebody.webp">
+      <img src="/coming.webp">
     </div>
   </a>
 </li>
@@ -31,15 +31,15 @@
     <div class="c-newsList_columnLeft">
       <div class="newsList_info c-newsList_info">
         <div class="newsList_category c-newsList_category">
-          WALLET             </div>
+            </div>
         <time class="newsList_date c-newsList_date">
                      </time>
       </div>
       <h3 class="newsList_title c-newsList_title">
-           ミニマムウォレット       </h3>
+             </h3>
     </div>
     <div class="newsList_img c-newsList_img">
-      <img src="/roundbody.webp">
+      <img src="/coming.webp">
     </div>
   </a>
 </li>
@@ -50,15 +50,15 @@
     <div class="c-newsList_columnLeft">
       <div class="newsList_info c-newsList_info">
         <div class="newsList_category c-newsList_category">
-          KEYCASE          </div>
+             </div>
         <time class="newsList_date c-newsList_date">
                      </time>
       </div>
       <h3 class="newsList_title c-newsList_title">
-             キーケース<br class="sp">(&thinsp;フックタイプ&thinsp;)   </h3>
+             </h3>
     </div>
     <div class="newsList_img c-newsList_img">
-      <img src="/jeafiee.webp">
+      <img src="/coming.webp">
     </div>
   </a>
 </li>
@@ -68,15 +68,15 @@
     <div class="c-newsList_columnLeft">
       <div class="newsList_info c-newsList_info">
         <div class="newsList_category c-newsList_category">
-          WALLET           </div>
+               </div>
         <time class="newsList_date c-newsList_date">
                    </time>
       </div>
       <h3 class="newsList_title c-newsList_title">
-        ３つ折り財布         </h3>
+           </h3>
     </div>
     <div class="newsList_img c-newsList_img">
-      <img src="/three1.webp">
+      <img src="/coming.webp">
     </div>
   </a>
 </li>
@@ -85,12 +85,12 @@
     <div class="c-newsList_columnLeft">
       <div class="newsList_info c-newsList_info">
         <div class="newsList_category c-newsList_category">
-          WALLET             </div>
+                   </div>
         <time class="newsList_date c-newsList_date">
                    </time>
       </div>
       <h3 class="newsList_title c-newsList_title">
-        ラウンドウォレット       </h3>
+              </h3>
     </div>
     <div class="newsList_img c-newsList_img">
       <img src="/coming.webp">
@@ -102,12 +102,12 @@
     <div class="c-newsList_columnLeft">
       <div class="newsList_info c-newsList_info">
         <div class="newsList_category c-newsList_category">
-          WALLET             </div>
+               </div>
         <time class="newsList_date c-newsList_date">
                     </time>
       </div>
       <h3 class="newsList_title c-newsList_title">
-        ミニマムウォレット         </h3>
+                </h3>
     </div>
     <div class="newsList_img c-newsList_img">
       <img src="/coming.webp">
@@ -119,12 +119,12 @@
     <div class="c-newsList_columnLeft">
       <div class="newsList_info c-newsList_info">
         <div class="newsList_category c-newsList_category">
-          WALLET            </div>
+                    </div>
         <time class="newsList_date c-newsList_date">
                     </time>
       </div>
       <h3 class="newsList_title c-newsList_title">
-        ミニウォレット            </h3>
+                  </h3>
     </div>
     <div class="newsList_img c-newsList_img">
       <img src="/coming.webp">
@@ -136,12 +136,12 @@
     <div class="c-newsList_columnLeft">
       <div class="newsList_info c-newsList_info">
         <div class="newsList_category c-newsList_category">
-          MIDDLEWALLET             </div>
+                    </div>
         <time class="newsList_date c-newsList_date">
                      </time>
       </div>
       <h3 class="newsList_title c-newsList_title">
-        ミドルウォレット            </h3>
+                 </h3>
     </div>
     <div class="newsList_img c-newsList_img">
       <img src="/coming.webp">
