--- a/src/components/Walletfas.astro
+++ b/src/components/Walletfas.astro
@@ -6,13 +6,12 @@
                   <div class="newsTop">
                     <div class="newsTop_info">
                       <div class="newsTop_category">
-                        STATIONERY
-                      </div>
+                         WALLET     </div>
                       <time class="newsTop_date">
                             </time>
                     </div>
                     <h1 class="newsTop_title">
-                        RHODIAカバー   </h1>
+                      ラウンドファスナーウォレット</h1>
                     <div class="newsTop_share">
                       <div class="newsTop_shareTitle"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="18px"
                         height="18px"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg><a class="sns" href="https://www.instagram.com/pirca.mabui/" target="blank">&thinsp;Instagram</a>
@@ -21,32 +20,26 @@
                     </div>
                   </div>
                   <div class="newsVisual">
-                    <img src="/notekore.webp">
+                    <img src="/pink1.webp">
                   </div>
                 </div>
                 
                 
                 <div class="newsEditor">
-                  
-                  <p>手に収まるポケットサイズで、小さなバッグでも場所を取らず、ちょっとしたお出かけのお供にも最適です。<br class="sp"><br class="sp"><br class="pc">【&thinsp;サイズ(cm) 約H11.5 W8.3cm&thinsp;】</p>
+                  <p>
+                    計4箇所のカードポケットとボックス型のコインケースを付属しています。<br class="sp"><br class="sp">手に収まるミニマムなサイズ感で、小さなバッグでも場所を取らず、 メインの財布としてもおすすめです。<br class="sp"><br class="sp"><br class="pc">【&thinsp;サイズ(cm) 約H9 W10&thinsp;】</p>
                 <p>&nbsp;</p>
-        
-                <p><img loading="lazy" src="/notr2.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>RHODIAは世界的に有名なフランス製のメモパッドです。<br class="sp"><br class="sp">プロフェッショナルユースに耐える機能性と優れたデザイン性は、誕生以来、変わらずに世界中のユーザーを魅了し続けています。</p>
+                <p><img loading="lazy" src="/pinkkoreeee.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+                <p><img loading="lazy" src="/pink2.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+              
+                <p>ホックはドイツの老舗金具メーカーPRYM社を使用しています。<br class="sp">その中でも、高級部類のプリムホック挽き物（&thinsp;挽き物=素材をくり抜いたり、成形して作られた物のこと&thinsp;）を使用しています。<br class="sp"><br class="sp"><br class="pc"><br class="pc">金具は少し硬めで、開閉時に「カチッ」とした高い音が特徴的なホックです。</p>
                 <p>&nbsp;</p>
-                <p><img loading="lazy" src="/note6.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>滑らかで反射のない用紙に加えて、一枚ずつ切り離しが可能なため、用途に合わせてお使い頂けます。<br class="pc"><br class="pc"><br class="sp"><br class="sp">ロディアNo.11が商品に付属しているため、2種類の中から1つご選択が可能です。<br class="pc"><br class="sp">写真左&thinsp;:&thinsp;7mm横罫【&thinsp;ラインタイプ &thinsp;】&thinsp;<br class="sp">写真右&thinsp;:&thinsp;5mm方眼【&thinsp;ブロックタイプ&thinsp;】</p>
-                <p>&nbsp;</p>
-                <p><img loading="lazy" src="/note66.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p><img loading="lazy" src="/note4.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>外装にはつなぎ目がない一枚革を使用したことで、長く使用できることに加えて皮革そのものの風合いの変化もお楽しみ頂けるアイテムです。<br class="pc"><br class="pc"><br class="sp"><br class="sp">使用する際には、上部の隙間に差し込むことで写真のように固定したままお使い頂けます。<br class="sp"><br class="sp">ペンホルダーは、付属せずにデザイン性、利便性を高めた設計にしています。</p>
-                <p>&nbsp;</p>
-                <p><img loading="lazy" src="/notr3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>ホックはドイツの老舗金具メーカーPRYM社を使用しています。<br class="sp">その中でも、高級部類のプリムホック挽き物（&thinsp;挽き物=素材をくり抜いたり、成形して作られた物のこと&thinsp;）を使用しています。<br class="sp"><br class="sp"><br class="pc"><br class="pc">金具は少し硬めで、開閉時に「カチッ」とした高い音が特徴的なホックです。</p><br class="sp"><br class="sp"><br class="pc">
-                  
+                <p><img loading="lazy" src="/pink44.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+                <p>背面は、ガバっと開く設計にしているため、ストレスなくお札の出し入れができます。<br class="pc"><br class="pc"><br class="sp"><br class="sp">両端のカードポケットには、普段あまり使わないカード類を4、5枚ほど束にして収納がすることができます。<br class="sp"><br class="sp">こだわりを詰め込んだ設計にしたことで、コンパクトな大きさと使いやすさを両立させました。</p>
+                <br class="sp"><br class="sp"><br class="pc">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
                   height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
-                  &ensp;<a href="/" class="animate-link">(準備中)ご注文はこちらから</a>・・・6,200円（税込)</a><br class="sp"><br class="pc">
+                  &ensp;<a href="/" class="animate-link">(準備中)ご注文はこちらから</a>・・・22,000円（税込)</a><br class="sp"><br class="pc">
                   <br>
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
                   height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
@@ -55,19 +48,20 @@
              
                 </p>
 
-            
-                </div>
 
-                <div class="c-singlePager">
-                    <a href="/smallwallet" class="c-singlePager_arrow-prev">
-                    <span>Back</span>
-                  </a>
-                      <a href="/minimam" class="c-singlePager_arrow-next">
-                    <span>Next</span>
-                  </a>
+            
                 </div>
               </div>
   
+              <div class="c-singlePager">
+                <a href="/threewallet" class="c-singlePager_arrow-prev">
+                <span>Back</span>
+              </a>
+                  <a href="/smallwallet" class="c-singlePager_arrow-next">
+                <span>Next</span>
+              </a>
+            </div>
+
   
       <style>
 
@@ -444,4 +438,5 @@ a {
 
 
 
+  
         </style>
