--- a/src/components/AboutEn.astro
+++ b/src/components/AboutEn.astro
@@ -36,7 +36,7 @@
       <h2 class="introduction__heading astro-HR23OLMI"><span class="ttl_line">Exquisite linen threads, woven with the threads of history and tradition</span> </h2>
       <p class="introduction__text astro-HR23OLMI">We use the premium hemp thread 'Fil Au Chinois,' established in France in 1847.This waxed hemp thread is favored by many luxury maisons, including Hermès, and artisans with discerning tastes.<br class="sp"><br class="sp">This hemp thread, crafted by skilled artisans using techniques from the late 19th century, is made from sturdy natural flax.</p></div>
       <figure class="introduction__map astro-HR23OLMI">
-      <img src="/fefeknfefee-min.webp" alt="threads" class="astro-HR23OLMI">
+      <img src="/filauchinois.webp" alt="threads" class="astro-HR23OLMI">
               <br><center><span style="color: #999999;">References:https://filauchinois.com/</span>  </center>
             </figure>
     </div>
@@ -52,7 +52,7 @@
         </div>
         
         <figure class="introduction__map astro-HR23OLMI">
-        <img src="/fehhfhehfee-min.webp" alt="Prym" class="astro-HR23OLMI">
+        <img src="/prym.webp" alt="Prym" class="astro-HR23OLMI">
                 <br><center><span style="color: #999999;">References:https://www.prym.com/</span>  </center>
               </figure>
       </div>
@@ -69,7 +69,7 @@
           </div>
           
           <figure class="introduction__map astro-HR23OLMI">
-          <img src="/ffasfaf.webp" alt="amiet" class="astro-HR23OLMI">
+          <img src="/amiet.webp" alt="amiet" class="astro-HR23OLMI">
                   <br><center><span style="color: #999999;"></span>  </center>
                 </figure>
         </div>
