--- a/src/components/Note.astro
+++ b/src/components/Note.astro
@@ -39,7 +39,7 @@
                 <p>&nbsp;</p>
                 <p><img loading="lazy" src="/note66.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
                 <p><img loading="lazy" src="/note4.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>外装にはつなぎ目がない一枚革を使用したことで、長く使用できることに加えて皮革そのものの風合いの変化もお楽しみ頂けるアイテムです。<br class="pc"><br class="pc"><br class="sp"><br class="sp">使用する際には、上部の隙間に差し込むことで写真のように固定したままお使い頂けます。<br class="sp"><br class="sp">ペンホルダーは、付属せずにデザイン性、利便性を高めた設計にしています。</p>
+                <p>外装にはつなぎ目がない一枚革を使用したことで、革そのものの風合いの変化もお楽しみ頂けるアイテムです。<br class="pc"><br class="pc"><br class="sp"><br class="sp">使用する際には、上部の隙間に差し込むことで写真のように固定したままお使い頂けます。<br class="sp"><br class="sp">ペンホルダーは、付属せずにデザイン性、利便性を高めた設計にしています。</p>
                 <p>&nbsp;</p>
                 <p><img loading="lazy" src="/notr3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
                 <p>ホックはドイツの老舗金具メーカーPRYM社を使用しています。<br class="sp">その中でも、高級部類のプリムホック挽き物（&thinsp;挽き物=素材をくり抜いたり、成形して作られた物のこと&thinsp;）を使用しています。<br class="sp"><br class="sp"><br class="pc"><br class="pc">金具は少し硬めで、開閉時に「カチッ」とした高い音が特徴的なホックです。</p><br class="sp"><br class="sp"><br class="pc">
