--- a/src/components/Productlist.astro
+++ b/src/components/Productlist.astro
@@ -107,10 +107,10 @@
                     </time>
       </div>
       <h3 class="newsList_title c-newsList_title">
-        ミニマムウォレット Type2       </h3>
+        3つ折り財布Type2      </h3>
     </div>
     <div class="newsList_img c-newsList_img">
-      <img src="/round2.webp">
+      <img src="/threewallet1-min.webp">
     </div>
   </a>
 </li>
