--- a/src/components/Pa1.astro
+++ b/src/components/Pa1.astro
@@ -15,10 +15,15 @@
                   
                 </div>
                 <div id="slides__4" class="slide">
-                    <img loading="lazy" src="/color2.webp" class="slide__img" alt=皮サンプル２"">
+                    <img loading="lazy" src="/fasner-min.webp" class="slide__img" alt="ファスナー色">
+
+                </div>
+                <div id="slides__5" class="slide">
+                    <img loading="lazy" src="/fasnersample.webp" class="slide__img" alt="ファスナー色">
 
                  
                 </div>
+
             </div>
             <div class="slider__nav">
                 <a class="slider__navlink" href="#slides__1"></a>
@@ -32,7 +37,7 @@
       
 
         <p class="bun">
-            革・糸の色・金具のひとつひとつなど、細部にまでこだわれるのが、セミオーダーの醍醐味です。お客様の好みにあった組み合わせをぜひ見つけてください。<br class="pc">
+            革・糸の色・金具のひとつひとつなど、細部にまでこだわれるのが、セミオーダーの醍醐味です。お客様の好みにあった組み合わせをぜひ見つけてください。<a href="https://pircamabui.com/patternorder/" class="animate-link" >詳細はこちらから</a><br class="pc">
             <br class="sp"><br class="sp"><br class="pc">お引き渡しについて、ご配達・仕入れにかかる日数を加え、発送まで３、４週間程度お時間を頂いております。
             <a href="/leagal" class="animate-link" >詳細はこちらから</a>
           
@@ -65,7 +70,7 @@
                     <option value="ピンク">ピンク</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="exteriorwhite">外装 ホワイトワックス(希望の方のみ)</label>
+                <label class="Home_Contact_Label__hwNpu" for="exteriorwhite">外装 ホワイトワックス (&thinsp;希望の方のみ+3,000円&thinsp;)</label>
                 <select name="exteriorwhite" class="form-control" >
                     <option value="" disabled selected>選択してください</option>
                     <option value="ブラウン">ブラウン</option>
@@ -130,18 +135,27 @@
                     <option value="ピンク">ピンク</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="fasner">*ファスナー</label>
+                <label class="Home_Contact_Label__hwNpu" for="fasner">*ファスナー (&thinsp;ゴールド&thinsp;)</label>
                 <select name="fasner" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
+                    <option value="ホワイト">ホワイト</option>
                     <option value="ブラウン">ブラウン</option>
-                    <option value="ダークブラウン">ダークブラウン</option>
                     <option value="ブラック">ブラック</option>
-                    <option value="グレー">グレー</option>
-                    <option value="オレンジ">オレンジ</option>
                     <option value="グリーン">グリーン</option>
+                    <option value="ワイン">ワイン</option>
+                    <option value="オレンジ">オレンジ</option>
                     <option value="ターコイズ">ターコイズ</option>
-                    <option value="ピンク">ピンク</option>
                 </select>
+
+                <label class="Home_Contact_Label__hwNpu" for="kokuin">ファスナー (&thinsp;アンティーク、シルバー 希望の方&thinsp;)
+                </label>
+                <select name="kokuin" class="form-control" >
+                    <option value="" disabled selected>選択してください</option>
+                    <option value="シルバー">シルバー</option>
+                    <option value="アンティーク">アンティーク</option>
+                
+                </select>
+
 
                 <label class="Home_Contact_Label__hwNpu" for="ito">*糸</label>
                 <select name="ito" class="form-control" required="required">
@@ -156,7 +170,7 @@
                     <option value="ピンク">ピンク</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="kanagu">*金具（キーフック）</label>
+                <label class="Home_Contact_Label__hwNpu" for="kanagu">*金具（&thinsp;キーフック&thinsp;）</label>
                 <select name="kanagu" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ゴールド">ゴールド</option>
@@ -164,15 +178,15 @@
                     <option value="アンティーク">アンティーク</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="kokuin">刻印模様</label>
-                <select name="kokuin" class="form-control" >
+                <label class="Home_Contact_Label__hwNpu" for="kokuin">*刻印模様 (&thinsp;配置:右ポケット&thinsp;)</label>
+                <select name="kokuin" class="form-control" required="required" >
                     <option value="" disabled selected>選択してください</option>
                     <option value="有り">有り</option>
                     <option value="無し">無し</option>
                 
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="name">イニシャル刻印</label>
+                <label class="Home_Contact_Label__hwNpu" for="name">イニシャル刻印 (&thinsp;任意 配置:右ポケット&thinsp;)</label>
                 <input class="Home_Contact_InputText__vKPd7" id="name"  placeholder="12文字までをご記入ください">
            
                 <button type="submit" class="Home_Contact_Button__sfQX_">送信する</button>
@@ -322,7 +336,6 @@ a.slide__next,
             line-height: 2;
             font-size: 0.9575rem;
             font-family: "Shippori Mincho", sans-serif;
-            margin: 80px auto 0;
         
         }
         
@@ -380,7 +393,7 @@ a.slide__next,
             width: 80%;
             max-width: 1200px;
             margin: 40px auto;
-            margin-top: 100px;
+            margin-top: 120px;
         }
 
 
