--- a/src/components/Leagal.astro
+++ b/src/components/Leagal.astro
@@ -11,8 +11,8 @@
     <p class="c-pageSection_text">販売責任者:<br>ヘルナンデス</p>
     <p class="c-pageSection_text">取り扱い商品<br>小物や鞄等の皮革製品</p>
     <p class="c-pageSection_text">所在地<br>〒0800019 北海道帯広市西九条南1-2-1</p>
-    <p class="c-pageSection_text">電話番号<br>070-4798-7668<br>(※申し訳ございませんが、電話の窓口は設けておりません。お問い合わせフォームにてお願いいたします。)</p>
-    <p class="c-pageSection_text">連絡先メールアドレス<br>rafale944@gmail.com</p>
+    <p class="c-pageSection_text">電話番号<br>070-4798-7668<br>(※申し訳ございませんが、電話の窓口は設けておりません。<a href="https://pircamabui.com/contact/" class="animate-link">お問い合わせフォームにてお願いいたします。</a>)</p>
+    <p class="c-pageSection_text">連絡先<br><a href="https://pircamabui.com/contact/" class="animate-link">お問い合わせフォームにてお願いいたします。</a></p>
     <p class="c-pageSection_text">ホームページURL<br>https://pircamabui.com/</p>
   </section>
   <section class="c-pageSection">
@@ -258,6 +258,21 @@ a {
     
 }
 
+
+      
+.animate-link {
+                  text-decoration: none; /* デフォルトの下線を非表示にする */
+                  color: #003EA2; /* 文字色 */
+                  background-image: linear-gradient(90deg, #003EA2, #003EA2); /* 線の色 */
+                  background-repeat: no-repeat;
+                  background-position: left bottom; /* 線の起点を左・下に設定 */
+                  background-size: 0 1px; /* 線の横幅を0、縦幅を1pxに */
+                  transition: background-size 0.6s; /* 線を伸ばすアニメーション実行時間を指定 */
+                }
+                
+                .animate-link:hover {
+                  background-size: 100% 1px; /* 線の横幅を100%にする */
+                }
 .wrapper{
     padding-bottom: 100px;
 }
